Improve visual scene

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ canvas{display:block}
 #legend{bottom:10px;left:10px;display:grid;grid-template-columns:auto 1fr;grid-gap:4px 8px}
 #legend .box{width:16px;height:16px;border-radius:3px}
 .controls label{display:block;margin-bottom:5px;font-weight:600}
+#flux_values{margin-top:4px}
 .controls select,.controls button{width:100%;margin-bottom:6px}
 .fluxToggle{margin-right:4px}
 </style>
@@ -33,6 +34,7 @@ canvas{display:block}
   <hr style="border:0;border-top:1px solid #999;margin:6px 0">
   <div id="q_solar_display">Q<sub>solar</sub> : —</div>
   <div id="flux_info_canopy">Canopy sensible H : —</div>
+  <div id="flux_values"></div>
 </div>
 
 <!-- legend -------------------------------------------------------------------->
